Changed particle system gen algo. Now it is real!

--- a/AstroViewer/Assets/Plugins/Android/gradleTemplate.properties
+++ b/AstroViewer/Assets/Plugins/Android/gradleTemplate.properties
@@ -5,3 +5,7 @@ unityStreamingAssets=**STREAMING_ASSETS**
 **ADDITIONAL_PROPERTIES**
 android.enableJetifier=true
 android.useAndroidX=true
+#systemProp.http.proxyHost=127.0.0.1
+#systemProp.http.proxyPort=8889
+#systemProp.https.proxyHost=127.0.0.1
+#systemProp.https.proxyPort=8889
